--- a/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
@@ -222,31 +222,7 @@
 				</services:WatermarkService.Watermark>
 			</TextBox>
 
-			<TextBox Grid.Row="1" Grid.Column="0" 
-					 MinHeight="25" BorderThickness="0" 
-					 Focusable="False" IsHitTestVisible="False" Panel.ZIndex="2"
-					 Background="Transparent" Foreground="#888"
-					 Text="{Binding FormattedText, ElementName=TagCtrl, Converter={conv:TagsToPlaceholder}, Mode=OneWay}"
-					 AcceptsReturn="False" AcceptsTab="False" 
-					 Margin="5,0,0,0" VerticalContentAlignment="Top" >
-			</TextBox>
-
-			<ctrl:TagEditor Grid.Row="1" Grid.Column="0" TagSource="{Binding SelectedNote.Tags}" Changed="TagEditor_OnChanged" x:Name="TagCtrl" MinHeight="25" BorderThickness="0" AcceptsReturn="False" AcceptsTab="False" VerticalContentAlignment="Bottom">
-				<ctrl:TagEditor.TokenTemplate>
-					<DataTemplate>
-						<Border VerticalAlignment="Center" Background="SeaShell" BorderThickness="1" BorderBrush="{Binding ., Converter={conv:TagToBorderBrush}}" Margin="-4,1,8,1" Padding="1">
-							<TextBlock Text="{Binding .}" />
-						</Border>
-					</DataTemplate>
-				</ctrl:TagEditor.TokenTemplate>
-				<ctrl:TagEditor.Document>
-					<FlowDocument>
-						<Paragraph>
-							<Run />
-						</Paragraph>
-					</FlowDocument>
-				</ctrl:TagEditor.Document>
-			</ctrl:TagEditor>
+			<ctrl:TagEditor Grid.Row="1" Grid.Column="0" TagSource="{Binding SelectedNote.Tags}" Repository="{Binding Repository}" Settings="{Binding Settings}" Changed="TagEditor_OnChanged"/>
 
 			<StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom" Orientation="Horizontal" Margin="8,2">
 				<TextBlock Text="*" Foreground="DarkGray" Visibility="{Binding SelectedNote.IsLocalSaved, Converter={conv:BoolToVisibility}, ConverterParameter=Collapsed;Visible}" />
