--- a/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
@@ -120,9 +120,10 @@
 				<Image Source="/Resources/plus.png" />
 			</Button>
 
-			<ListView Grid.Column="0"  Grid.Row="1" Grid.ColumnSpan="2"
+			<ListView x:Name="NotesList" Grid.Column="0"  Grid.Row="1" Grid.ColumnSpan="2"
 					  AllowDrop="True"
 					  Drop="NotesList_Drop"
+					  KeyDown="NotesList_KeyDown"
 					  services:MultiDatatemplateService.MultiTemplateSelector="{Binding Settings.NotePreviewStyle}"
 					  HorizontalContentAlignment="Stretch"
 					  ScrollViewer.HorizontalScrollBarVisibility="Hidden"
