auto sort tags alphabetically

--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -150,6 +150,7 @@
 								</StackPanel>
 								<StackPanel Grid.Row="0" Grid.Column="1">
 									<CheckBox Margin="2" Content="Close to tray" IsChecked="{Binding Settings.CloseToTray}" />
+									<CheckBox Margin="2" Content="Automatically sort tags"  IsChecked="{Binding Settings.AutoSortTags}" />
 								</StackPanel>
 
 								<TextBlock Grid.Row="1" Grid.Column="0" Margin="5"  Text="Note sorting:"/>
